==> RT-Thread/rt-thread/bsp/n32g45x/drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void n32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    GPIO_WriteBit(index->gpio, index->pin, (Bit_OperateType)value);
}

static int n32_pin_read(rt_device_t dev, rt_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return value;
    }

    value = GPIO_ReadInputDataBit(index->gpio, index->pin);

    return value;
}

static void n32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    const struct pin_index *index;
    GPIO_InitType GPIO_InitStructs;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    /* Configure GPIO_InitStructure */
    GPIO_InitStruct(&GPIO_InitStructs);  //GPIO_InitStruct
    GPIO_InitStructs.Pin = index->pin;
    GPIO_InitStructs.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructs.GPIO_Speed = GPIO_Speed_50MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        GPIO_InitStructs.GPIO_Mode = GPIO_Mode_Out_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        GPIO_InitStructs.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        GPIO_InitStructs.GPIO_Mode = GPIO_Mode_IPU;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        GPIO_InitStructs.GPIO_Mode = GPIO_Mode_IPD;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        GPIO_InitStructs.GPIO_Mode = GPIO_Mode_Out_OD;
    }

		GPIO_InitPeripheral(index->gpio,&GPIO_InitStructs);
}

static rt_err_t n32_pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                     rt_uint32_t enabled)
{
    GPIO_InitType GPIO_InitStructs;
    EXTI_InitType EXTI_InitStructs;
    NVIC_InitType NVIC_InitStructs;
    const struct pin_index *index;
    const struct pin_irq_map *irqmap;
    rt_base_t level;
    rt_int32_t irqindex = -1;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return RT_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(index->pin);
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return RT_ENOSYS;
        }

        irqmap = &pin_irq_map[irqindex];

        /* Configure GPIO_InitStructure */
        GPIO_InitStruct(&GPIO_InitStructs);
        EXTI_InitStruct(&EXTI_InitStructs);
        GPIO_InitStructs.Pin = irqmap->pinbit;        
        GPIO_InitStructs.GPIO_Speed = GPIO_Speed_50MHz;
        EXTI_InitStructs.EXTI_Line = irqmap->pinbit;
        EXTI_InitStructs.EXTI_Mode = EXTI_Mode_Interrupt;
        EXTI_InitStructs.EXTI_LineCmd = ENABLE;
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            EXTI_InitStructs.EXTI_Trigger = EXTI_Trigger_Rising;
            break;
        case PIN_IRQ_MODE_FALLING:
            EXTI_InitStructs.EXTI_Trigger = EXTI_Trigger_Falling;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            EXTI_InitStructs.EXTI_Trigger = EXTI_Trigger_Rising_Falling;
            break;
        }
        GPIO_InitPeripheral(index->gpio, &GPIO_InitStructs);
        GPIO_ConfigEXTILine(index->portsource, index->pinsource);
        EXTI_InitPeripheral(&EXTI_InitStructs);
        NVIC_InitStructs.NVIC_IRQChannel = irqmap->irqno;
        NVIC_InitStructs.NVIC_IRQChannelCmd = ENABLE;
        NVIC_InitStructs.NVIC_IRQChannelPreemptionPriority = 5;
        NVIC_InitStructs.NVIC_IRQChannelSubPriority = 0;
        NVIC_Init(&NVIC_InitStructs);
        pin_irq_enable_mask |= irqmap->pinbit;

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(index->pin);
        if (irqmap == RT_NULL)
        {
            return RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        pin_irq_enable_mask &= ~irqmap->pinbit;

        NVIC_InitStructs.NVIC_IRQChannelCmd = DISABLE;
        NVIC_InitStructs.NVIC_IRQChannelPreemptionPriority = 5;
        NVIC_InitStructs.NVIC_IRQChannelSubPriority = 0;

        if (( irqmap->pinbit>=GPIO_PIN_5 )&&( irqmap->pinbit<=GPIO_PIN_9 ))
        {
            if(!(pin_irq_enable_mask&(GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9)))
            {    
                NVIC_InitStructs.NVIC_IRQChannel = irqmap->irqno;
            }
        }
        else if (( irqmap->pinbit>=GPIO_PIN_10 )&&( irqmap->pinbit<=GPIO_PIN_15 ))
        {
            if(!(pin_irq_enable_mask&(GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15)))
            {    
                NVIC_InitStructs.NVIC_IRQChannel = irqmap->irqno;
            }
        }
        else
        {
            NVIC_InitStructs.NVIC_IRQChannel = irqmap->irqno;
        }        

        NVIC_Init(&NVIC_InitStructs);
        rt_hw_interrupt_enable(level);  
    }
    else
    {
        return -RT_ENOSYS;
    }

    return RT_EOK;
}

void EXTI9_5_IRQHandler(void)
{
    rt_interrupt_enter();
    if(RESET != EXTI_GetITStatus(EXTI_LINE5))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_5);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE6))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_6);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE7))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_7);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE8))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_8);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE9))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_9);
    }
    rt_interrupt_leave();
}

void EXTI15_10_IRQHandler(void)
{
    rt_interrupt_enter();
    if(RESET != EXTI_GetITStatus(EXTI_LINE10))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_10);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE11))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_11);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE12))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_12);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE13))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_13);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE14))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_14);
    }
    if(RESET != EXTI_GetITStatus(EXTI_LINE15))
    {
        GPIO_EXTI_IRQHandler(GPIO_PIN_15);
    }
    rt_interrupt_leave();
}

int rt_hw_pin_init(void)
{

#ifdef GPIOA
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);
#endif
#ifdef GPIOB
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOB, ENABLE);
#endif
#ifdef GPIOC
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOC, ENABLE);
#endif
#ifdef GPIOD
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOD, ENABLE);
#endif
#ifdef GPIOE
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOE, ENABLE);
#endif
#ifdef GPIOF
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOF, ENABLE);
#endif
#ifdef GPIOG
    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOG, ENABLE);
#endif

    RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_AFIO, ENABLE);

    return rt_device_pin_register("pin", &_n32_pin_ops, RT_NULL);
}
